server/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: walkthrough-server
  namespace: walkthroughs
spec:
  selector:
    app: walkthrough-server
  ports:
    - port: 80
      targetPort: 8080
